Added some code

--- a/project.ipynb
+++ b/project.ipynb
@@ -22,12 +22,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Methods:"
+    "First, we need to import all the necessary libraries:"
    ]
   },
   {
@@ -35,6 +33,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "library(tidyverse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we need to read the dataset in:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Methods:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Expected outcomes and significance:"
    ]
