--- a/project.ipynb
+++ b/project.ipynb
@@ -32,11 +32,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in parse(text = x, srcfile = src): <text>:1:10: unexpected symbol\n1: Expected outcomes\n             ^\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in parse(text = x, srcfile = src): <text>:1:10: unexpected symbol\n1: Expected outcomes\n             ^\nTraceback:\n"
+     ]
+    }
+   ],
+   "source": [
+    "Expected outcomes and significance:"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Expected outcomes and significance:"
+    "library(tidyverse)\n",
+    "library(repr)\n",
+    "library(tidymodels)"
    ]
   }
  ],
