--- a/project.ipynb
+++ b/project.ipynb
@@ -15,11 +15,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Data modeling is one of the most powerful tools to analyze data and draw meaningful conclusions from it.\n",
+    "To score well on a test, it is important that we use a method of study which has historically and scientifically \n",
+    "been proven efficient. Is it better to study one night before the exam for an extended period of time or to distribute study sessions in intervals of 30-40 minutes over a couple of days?\n",
+    "\n",
+    " We use the data set “uns_datatable.xls” which consists of students’ educational features such as study time, repetitions, exam performance in current and pre-requisite courses, etc. The goal is to establish a relationship between a student’s educational habits and conceptual understanding. \n"
+   ]
   },
   {
    "cell_type": "markdown",
