--- a/project.ipynb
+++ b/project.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "knowledge_data_df <- read_excel(\"data/uns_datatable.xls\", sheet = \"Training_Data\", range = cell_cols(\"A:F\"))"
+    "knowledge <- read_excel(\"data/uns_datatable.xls\", sheet = \"Training_Data\", range = cell_cols(\"A:F\"))"
    ]
   },
   {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,8 @@
     }
    ],
    "source": [
-    "knowledge_data_df <- mutate(knowledge_data_df, UNS = as_factor(UNS))"
+    "knowledge <- mutate(knowledge_data_df, UNS = as_factor(UNS))\n",
+    "knowledge"
    ]
   },
   {
@@ -382,10 +383,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Variable Legend:\n",
     "\n",
@@ -398,20 +397,89 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "data summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`summarise()` ungrouping output (override with `.groups` argument)\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 4 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>UNS</th><th scope=col>count</th><th scope=col>percentage</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>very_low</td><td>24</td><td> 9.302326</td></tr>\n",
+       "\t<tr><td>High    </td><td>63</td><td>24.418605</td></tr>\n",
+       "\t<tr><td>Low     </td><td>83</td><td>32.170543</td></tr>\n",
+       "\t<tr><td>Middle  </td><td>88</td><td>34.108527</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 4 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " UNS & count & percentage\\\\\n",
+       " <fct> & <int> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t very\\_low & 24 &  9.302326\\\\\n",
+       "\t High     & 63 & 24.418605\\\\\n",
+       "\t Low      & 83 & 32.170543\\\\\n",
+       "\t Middle   & 88 & 34.108527\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 4 × 3\n",
+       "\n",
+       "| UNS &lt;fct&gt; | count &lt;int&gt; | percentage &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| very_low | 24 |  9.302326 |\n",
+       "| High     | 63 | 24.418605 |\n",
+       "| Low      | 83 | 32.170543 |\n",
+       "| Middle   | 88 | 34.108527 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  UNS      count percentage\n",
+       "1 very_low 24     9.302326 \n",
+       "2 High     63    24.418605 \n",
+       "3 Low      83    32.170543 \n",
+       "4 Middle   88    34.108527 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# knowledge_data_df %>% \n",
+    "# group_by(UNS) %>% \n",
+    "# summarize(n = n())\n",
+    "\n",
+    "know_count <- nrow(knowledge)\n",
+    "    knowledge %>%\n",
+    "    group_by(UNS) %>%\n",
+    "    summarize(count = n(),\n",
+    "    percentage = n() / num_obs * 100)"
+   ]
   },
   {
    "cell_type": "code",
