--- a/project.ipynb
+++ b/project.ipynb
@@ -413,7 +413,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# knowledge_data_df %>% \n",
+    "# group_by(UNS) %>% \n",
+    "# summarize(n = n())\n",
+    "\n",
+    "know_count <- nrow(knowledge)\n",
+    "    knowledge %>%\n",
+    "    group_by(UNS) %>%\n",
+    "    summarize(count = n(),\n",
+    "    percentage = n() / num_obs * 100)"
+   ]
   },
   {
    "cell_type": "code",
