--- a/project.ipynb
+++ b/project.ipynb
@@ -53,11 +53,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 37,
-=======
    "execution_count": 15,
->>>>>>> df62bb805322d02e6caed8ae07f02787d2e68168
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,15 +72,11 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 38,
-=======
    "execution_count": 16,
->>>>>>> df62bb805322d02e6caed8ae07f02787d2e68168
    "metadata": {},
    "outputs": [],
    "source": [
-    "knowledge <- read_excel(\"data/uns_datatable.xls\", sheet = \"Training_Data\", range = cell_cols(\"A:F\"))"
+    "knowledge_data_df <- read_excel(\"data/uns_datatable.xls\", sheet = \"Training_Data\", range = cell_cols(\"A:F\"))"
    ]
   },
   {
@@ -96,11 +88,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 39,
-=======
    "execution_count": 18,
->>>>>>> df62bb805322d02e6caed8ae07f02787d2e68168
    "metadata": {},
    "outputs": [
     {
@@ -385,8 +373,7 @@
     }
    ],
    "source": [
-    "knowledge <- mutate(knowledge_data_df, UNS = as_factor(UNS))\n",
-    "knowledge"
+    "knowledge_data_df <- mutate(knowledge_data_df, UNS = as_factor(UNS))"
    ]
   },
   {
@@ -413,82 +400,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "data summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-<<<<<<< HEAD
    "outputs": [],
-=======
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`summarise()` ungrouping output (override with `.groups` argument)\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 4 × 3</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>UNS</th><th scope=col>count</th><th scope=col>percentage</th></tr>\n",
-       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>very_low</td><td>24</td><td> 9.302326</td></tr>\n",
-       "\t<tr><td>High    </td><td>63</td><td>24.418605</td></tr>\n",
-       "\t<tr><td>Low     </td><td>83</td><td>32.170543</td></tr>\n",
-       "\t<tr><td>Middle  </td><td>88</td><td>34.108527</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 4 × 3\n",
-       "\\begin{tabular}{lll}\n",
-       " UNS & count & percentage\\\\\n",
-       " <fct> & <int> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t very\\_low & 24 &  9.302326\\\\\n",
-       "\t High     & 63 & 24.418605\\\\\n",
-       "\t Low      & 83 & 32.170543\\\\\n",
-       "\t Middle   & 88 & 34.108527\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 4 × 3\n",
-       "\n",
-       "| UNS &lt;fct&gt; | count &lt;int&gt; | percentage &lt;dbl&gt; |\n",
-       "|---|---|---|\n",
-       "| very_low | 24 |  9.302326 |\n",
-       "| High     | 63 | 24.418605 |\n",
-       "| Low      | 83 | 32.170543 |\n",
-       "| Middle   | 88 | 34.108527 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  UNS      count percentage\n",
-       "1 very_low 24     9.302326 \n",
-       "2 High     63    24.418605 \n",
-       "3 Low      83    32.170543 \n",
-       "4 Middle   88    34.108527 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
->>>>>>> 2726373faa1c72cb68b2c0aa9b8450cc714fd998
    "source": [
     "# knowledge_data_df %>% \n",
     "# group_by(UNS) %>% \n",
