--- a/project.ipynb
+++ b/project.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Group Members: Kevin, Nariman, Sanya"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Introduction"
    ]
   },
