Fixed grammar, rewrote sentences, shortened some parts

--- a/project.ipynb
+++ b/project.ipynb
@@ -11,13 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Group Members: Kevin, Nariman, Sanya"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Introduction"
    ]
   },
@@ -25,11 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data modeling is one of the most powerful tools to analyze data and draw meaningful conclusions from it. To score well on a test, it is important that we use a method of study which has historically and scientifically been proven efficient. Is it better to study one night before the exam for an extended period of time or to distribute study sessions in intervals of 30-40 minutes over a couple of days?\n",
+    "To score well on a test, it is important that we use a method of study which has historically and scientifically been proven efficient. Is it better to study one night before the exam for an extended period of time or to distribute study sessions in intervals of 30-40 minutes over a couple of days? \n",
     "\n",
-    "We use the data set “uns_datatable.xls” which consists of students’ educational features such as study time, repetitions, exam performance in current and pre-requisite courses, etc. The goal is to establish a relationship between a student’s educational habits and conceptual understanding. \n",
-    "\n",
-    "In this study, we will be investigating two different predictor variables, study time for a given objective subject, represented by STG, and the frequency of study sessions for said subject, represented by SCG, along with how they correlate with our focus variable which will be the measuring stick of a study strategy's effectiveness, as represented by UNS, or knowledge level of a given subject. A list of around 200 observations with given UNS values will be used as an imported data frame, for training data."
+    "We aim to establish a relationship between a student’s educational habits and conceptual understanding. Our predictor variables are study time (STG) and frequency of study session (SCG) for a given goal subject. We will study how they correlate with our focus variable which will be the measuring stick of a study strategy's effectiveness, as represented by the knowledge level of the goal subject (UNS). \n"
    ]
   },
   {
@@ -59,26 +50,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we need to read in the required data, and wrangle it into a usable format. To do this, we need to first only read the first six columns, as the later columns are explanations of what the variable are and aren't actual data entries themselves. Also we only wish to use the training data as we just want to borrow this other study's accurate data collection and not further extrapolate on the results of their study!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "knowledge <- read_excel(\"data/uns_datatable.xls\", sheet = \"Training_Data\", range = cell_cols(\"A:F\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To further wrangle our data into a usable format, we wish to convert the last row, with only a limited number of possible options, to a factor."
    ]
   },
   {
@@ -94,37 +71,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great, this data is tidy, each column contains one variable, each row contains one observation, and each cell contains one value. \n",
-    "\n",
-    "A simple legend is outlined below, to be easily referred to when more readable names are required by the various visualizations in the later steps of this project."
+    "We wrangled the data and since our data already comes with training and testing data sets, we only imported the training set observations from the right excel sheet. Then, we filtered the required variables that we need.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Variable Legend:**\n",
-    "\n",
-    "STG (The degree of study time for goal object materials)\n",
-    "\n",
-    "SCG (The degree of repetition number of user for goal object materials)\n",
-    "\n",
-    "STR (The degree of study time of user for related objects with goal object)\n",
-    "\n",
-    "LPR (The exam performance of user for related objects with goal object)\n",
-    "\n",
-    "PEG (The exam performance of user for goal objects)\n",
-    "\n",
-    "UNS (The knowledge level of user)\n",
-    "     \n",
-    "Within this study, based on our chosen research question, we will actually only require usage of the following variables: the study time for the objective material (STG), the degree of repitition in the studying of said material (SCG), and the knowledge level of the person (UNS)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For preliminary explorations, first we we will investigate the distribution of people of various different knowledge levels in the data set. This is because if one group is significantly overrepresented, their data could be much more accurate than other groups, and when paired together may yield skewed results."
+    "Moreover, we investigated the distribution of people of various different knowledge levels in the data set. If one group is very overrepresented, their data could be much more accurate than the other groups, and when paired together, it may yield skewed results.\n"
    ]
   },
   {
@@ -194,10 +148,6 @@
     }
    ],
    "source": [
-    "# knowledge_data_df %>% \n",
-    "# group_by(UNS) %>% \n",
-    "# summarize(n = n())\n",
-    "\n",
     "know_count <- nrow(knowledge)\n",
     "    knowledge %>%\n",
     "    group_by(UNS) %>%\n",
@@ -209,21 +159,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result was a fairly even distribution for each category besides for those in the \"very low\" scores category. However, this is an acceptable weakness as scorers in the very low section are already expected to be rare, and have strange properties such as studying 0 hours, as long as the other categories are represented correctly, this outlier shouldn't be too serious."
+    "\n",
+    "The result was a fairly even distribution for each category besides for those in the \"very low\" scores category. This is an acceptable weakness as scorers in the very low section are already expected to be rare, but as long as the other categories are represented correctly, this outlier shouldn't be too significant.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, some plots were created to help visualize the data that is being explored."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "These histograms were used to observe the distribution of our two predictor variables STG and SCG, both of which are already standardized values from 0 to 1."
+    "These histograms were used to observe the distribution of our predictor variables, both of which are already standardized."
    ]
   },
   {
@@ -296,14 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a concentration of values for both variables around the 0.25 zone, but enough values exist at the other distrbutions that they are not negligible, so using the entire range of values from the data frame for future steps is acceptable."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For the final part, we will add a pre-liminary scatter plot to observe the general relationship of STG and SCG with UNS"
+    "There is a concentration of values for both variables around the 0.25 zone, but enough values exist at the other distributions that they are not negligible, so using the entire range of values from the data frame for future steps is acceptable."
    ]
   },
   {
@@ -342,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From this graph, it can be observed that higher study times and high repetition when studying does lower the possibility of having lower knowledge levels, which means relationships exist and our research is not meaningless."
+    "Finally, from this graph, it can be observed that higher study times and higher repetitions when studying do lower the possibility of having lower knowledge levels, which means a relationship exists and our research is not meaningless."
    ]
   },
   {
@@ -356,15 +293,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We focus on two predictor variables:\n",
-    "STG- Degree of Study Time\n",
-    "SCG- Degree of Repetition \n",
+    "We focus on two predictor variables: STG- Degree of Study Time & SCG- Degree of Repetition\n",
     "\n",
-    "The focus variables, UNS, represents Knowledge Level and is divided into \"very low\", \"low\", \"medium\" and \"high\". \n",
+    "Our focus variable (UNS) represents knowledge level and is divided into \"very low\", \"low\", \"medium\" and \"high\".\n",
     "\n",
-    "We are using the k-nearest neighbor classification technique. Where the Euclidean Distance formula: d(x,y) = sqrt((y2 - y1)^2 + (x2 - x1)^2)  is used to find the distance between the 5 closest observations from any test point (we chose k = 5 for now because its a general default conventional choice, and our data of around 200 standardized observations does not exhibit any strange behaviour, this may change as the project progresses in the future), and is used to predict the UNS of that point.\n",
+    "We are using the k-nearest neighbour classification technique. Where the Euclidean Distance formula: d(x,y) = sqrt((y2 - y1)^2 + (x2 - x1)^2) is used to find the distance between the 5 closest observations from any test point (we chose k = 5 for now, but this may change as we test more k values in the future). Using this technique, we can predict the UNS of a given point on the graph.\n",
     "\n",
-    "To visualize our results, we will graph our results using a color prediction map, with values in four different areas representing a high liklihood to fall into any of the four respective UNS categories."
+    "To visualize our results, we will graph our results using a colour prediction map, with values in four different areas representing a high likelihood to fall into any of the four respective UNS categories.\n"
    ]
   },
   {
@@ -378,19 +313,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We expect to find the relationship between a student’s educational habits and conceptual understanding. \n",
-    "\n",
-    "Such findings can help change the outlook of what educational habits and study strategies lead to successful learning.\n",
-    "\n",
-    "This study could give rise to questions such as what is the optimum number of hours or frequency of study sessions. "
+    "We expect to find the relationship between a student’s educational habits and conceptual understanding. Such findings can help change the outlook of what educational habits and study strategies lead to successful learning. Furthermore, our study could give rise to questions such as what is the optimum number of hours or frequency of study sessions for achieving the highest grade.\n",
+    " \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
