--- a/project.ipynb
+++ b/project.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we need to read in the required data, and wrangle it into a usable format. To do this, we need to first only read the first six columns, as the later columns are explanations of what the variable are and aren't actual data entries themselves. Also we only wish to use the training data "
+    "Now we need to read in the required data, and wrangle it into a usable format. To do this, we obtain the URL of the data set, download it as read_excel cannot read from URLs, we need to only read the first six columns, as the later columns are explanations of what the variable are and aren't actual data entries themselves. Also we only wish to use the training data as we just want to borrow this other study's accurate data collection and not further extrapolate on the results of their study!"
    ]
   },
   {
@@ -76,7 +76,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "knowledge_data_df <- read_excel(\"data/uns_datatable.xls\", sheet = \"Training_Data\", range = cell_cols(\"A:F\"))"
+    "URL <- \"https://archive.ics.uci.edu/ml/machine-learning-databases/00257/Data_User_Modeling_Dataset_Hamdi%20Tolga%20KAHRAMAN.xls\"\n",
+    "download.file(URL, \"data/user_knowledge_data\")\n",
+    "knowledge <- read_excel(\"data/user_knowledge_data\", sheet = \"Training_Data\", range = cell_cols(\"A:F\"))\n",
+    "knowledge"
    ]
   },
   {
