URL instead of local repository for dataset

--- a/project.ipynb
+++ b/project.ipynb
@@ -55,7 +55,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "knowledge <- read_excel(\"data/uns_datatable.xls\", sheet = \"Training_Data\", range = cell_cols(\"A:F\"))"
+    "URL <- \"https://archive.ics.uci.edu/ml/machine-learning-databases/00257/Data_User_Modeling_Dataset_Hamdi%20Tolga%20KAHRAMAN.xls\"\n",
+    "download.file(URL, \"data/user_knowledge_data\")\n",
+    "knowledge <- read_excel(\"data/user_knowledge_data\", sheet = \"Training_Data\", range = cell_cols(\"A:F\"))\n",
+    "knowledge"
    ]
   },
   {
@@ -71,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We wrangled the data and since our data already comes with training and testing data sets, we only imported the training set observations from the right excel sheet. Then, we filtered the required variables that we need.\n"
+    "We downloaded our data from the URL, read it as a dataframe from an excel sheet, wrangled the data and since our data already comes with training and testing data sets, we only imported the training set observations from the right excel sheet. Then, we filtered the required variables that we needed."
    ]
   },
   {
