Added image labels

--- a/project.ipynb
+++ b/project.ipynb
@@ -233,6 +233,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<b>Table 1</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We notice that the UNS variable is currently of character type, but within the context of our question, we want to measure a student's knowledge level based on these distinct labels, so we need to convert the UNS variable into factor type."
    ]
   },
@@ -327,6 +334,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<b>Table 2</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We investigated the distribution of our focus variable, people of various different knowledge levels in the data set. We did this by outputting a table with the number of observations that belonged in each UNS level. If one group is very overrepresented, their data could be much more precise than the other groups, and when paired together, it may yield skewed results."
    ]
   },
@@ -402,6 +416,13 @@
     "    group_by(UNS) %>%\n",
     "    summarize(count = n(),\n",
     "    percentage = n() / know_count * 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Table 3</b>"
    ]
   },
   {
@@ -487,6 +508,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<b>Img. 1 A (top) and B (bottom)</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "There is a concentration of values for both variables around the 0.25 zone, but enough values exist at the other distributions that they are not negligible, and the spread is fairly even, so using the entire range of values from the data frame for future steps is acceptable."
    ]
   },
@@ -529,6 +557,13 @@
     "scale_color_discrete(labels = c(\"Very Low\", \"High\", \"Low\", \"Medium\"))\n",
     "\n",
     "vis_scatter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Image 2</b>"
    ]
   },
   {
